k8s/stock-svc/StockSvcHTTPRoutes.yaml
 
# HTTPRoute
#
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: stock-svc-route
  namespace: default
spec:
  parentRefs:
    - name: stock-exchange-gateway # shoudl match with gateway name
  rules:
    - backendRefs:
        - name: stock-service # should match with service
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
